# smart-auction

backend/: .env.example  .gitignore  DATABASE_STRUCTURE.md  Dockerfile  Makefile  README.md  SCRIPTS_GUIDE.md  alembic.ini  dev.sh  docker-compose.prod.yml  docker-compose.yml  prod.sh  pyproject.toml  requirements.txt  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 1e9238b4e127_add_admin_users_table.py  b89c2e15c283_initial_migration_create_all_tables.py  c1a2b3c4d5e6_add_image_url_to_lots.py
backend/app/: config.py  custom_json.py  db.py  deps.py  enums.py  exceptions.py  jobs.py  logging_config.py  main.py  models.py  repositories.py  schemas.py  tasks.py  utils.py  websocket.py  worker.py
backend/app/routes/: __init__.py  admin.py  auth.py  public.py
backend/app/services/: analytics.py  auctions.py  auth.py  bids.py  s3.py  vendors.py
backend/auction_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/components/: AdminLayoutWrapper.tsx  ProtectedRoute.tsx  admin-layout-wrapper.tsx  app-sidebar.tsx  auction-cards.tsx  nav-items.tsx  nav-main.tsx  protected-route.tsx  section-cards.tsx  site-header.tsx  status-badge.tsx  traffic-light.tsx
frontend/contexts/: AuthContext.tsx  auth-context.tsx
frontend/hooks/: useAdminBidLog.ts  useAuction.ts  useAuctionsQuery.ts
frontend/lib/: api.ts  queryKeys.ts  socket.ts  validations.ts
frontend/types/: auction.ts  vendor.ts
(+37 files in other folders)
